# LogicParser

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md
cmake/: LogicParserConfig.cmake.in
include/LogicParser/: LogicParser.hpp  lexer.hpp  parser.hpp  parser_config.hpp  token.hpp
src/: lexer.cpp  parser.cpp
tests/: CMakeLists.txt  parser_tests.cpp
